// Vitest Snapshot v1

exports[`calculate simulations-professions-libérales > CIPAV ACRE 1`] = `
"dirigeant . indépendant . cotisations et contributions: 2434
dirigeant . rémunération . net: 417
dirigeant . rémunération . net . après impôt: 417
entreprise . chiffre d'affaires: 7440
impôt . montant: 0
protection sociale . retraite . CNAVPL . points acquis: 67
protection sociale . retraite . complémentaire: 2412
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV ACRE 2`] = `
"dirigeant . indépendant . cotisations et contributions: 4244
dirigeant . rémunération . net: 1667
dirigeant . rémunération . net . après impôt: 1594
entreprise . chiffre d'affaires: 24252
impôt . montant: 878
protection sociale . retraite . CNAVPL . points acquis: 266
protection sociale . retraite . complémentaire: 9587
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV ACRE 3`] = `
"dirigeant . indépendant . cotisations et contributions: 19848
dirigeant . rémunération . net: 4167
dirigeant . rémunération . net . après impôt: 3376
entreprise . chiffre d'affaires: 69852
impôt . montant: 9492
protection sociale . retraite . CNAVPL . points acquis: 531
protection sociale . retraite . complémentaire: 57380
protection sociale . retraite . trimestres: 4
Notifications affichées : entreprise . TVA . franchise de TVA . seuils dépassés"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 1`] = `
"dirigeant . indépendant . cotisations et contributions: 30886
dirigeant . rémunération . net: 5000
dirigeant . rémunération . net . après impôt: 3945
entreprise . chiffre d'affaires: 90888
impôt . montant: 12662
protection sociale . retraite . CNAVPL . points acquis: 533
protection sociale . retraite . complémentaire: 95868
protection sociale . retraite . trimestres: 4
Notifications affichées : entreprise . TVA . franchise de TVA . seuils dépassés"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 2`] = `
"dirigeant . indépendant . cotisations et contributions: 30332
dirigeant . rémunération . net: 5000
dirigeant . rémunération . net . après impôt: 3945
entreprise . chiffre d'affaires: 90324
impôt . montant: 12657
protection sociale . retraite . CNAVPL . points acquis: 533
protection sociale . retraite . complémentaire: 95868
protection sociale . retraite . trimestres: 4
Notifications affichées : entreprise . TVA . franchise de TVA . seuils dépassés"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 3`] = `
"dirigeant . indépendant . cotisations et contributions: 30010
dirigeant . rémunération . net: 5000
dirigeant . rémunération . net . après impôt: 3945
entreprise . chiffre d'affaires: 90000
impôt . montant: 12655
protection sociale . retraite . CNAVPL . points acquis: 708
protection sociale . retraite . complémentaire: 127350
protection sociale . retraite . trimestres: 4
Notifications affichées : entreprise . TVA . franchise de TVA . seuils dépassés"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 4`] = `
"dirigeant . indépendant . cotisations et contributions: 32073
dirigeant . rémunération . net: 5000
dirigeant . rémunération . net . après impôt: 3944
entreprise . chiffre d'affaires: 92076
impôt . montant: 12671
protection sociale . retraite . CNAVPL . points acquis: 533
protection sociale . retraite . complémentaire: 95868
protection sociale . retraite . trimestres: 4
Notifications affichées : entreprise . TVA . franchise de TVA . seuils dépassés"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 5`] = `
"dirigeant . indépendant . cotisations et contributions: 30529
dirigeant . rémunération . net: 5000
dirigeant . rémunération . net . après impôt: 3945
entreprise . chiffre d'affaires: 90528
impôt . montant: 12658
protection sociale . retraite . CNAVPL . points acquis: 805
protection sociale . retraite . complémentaire: 144828
protection sociale . retraite . trimestres: 4
Notifications affichées : entreprise . TVA . franchise de TVA . seuils dépassés"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 6`] = `
"dirigeant . indépendant . cotisations et contributions: 3903
dirigeant . rémunération . net: 83
dirigeant . rémunération . net . après impôt: 83
entreprise . chiffre d'affaires: 4896
impôt . montant: 0
protection sociale . retraite . CNAVPL . points acquis: 123
protection sociale . retraite . complémentaire: 4421
protection sociale . retraite . trimestres: 3"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 7`] = `
"dirigeant . indépendant . cotisations et contributions: 33016
dirigeant . rémunération . net: 5000
dirigeant . rémunération . net . après impôt: 3943
entreprise . chiffre d'affaires: 93012
impôt . montant: 12679
protection sociale . retraite . CNAVPL . points acquis: 533
protection sociale . retraite . complémentaire: 95868
protection sociale . retraite . trimestres: 4
Notifications affichées : entreprise . TVA . franchise de TVA . seuils dépassés"
`;

exports[`calculate simulations-professions-libérales > CIPAV exonération incapacité 1`] = `
"dirigeant . indépendant . cotisations et contributions: 7069
dirigeant . rémunération . net: 3333
dirigeant . rémunération . net . après impôt: 2808
entreprise . chiffre d'affaires: 47064
impôt . montant: 6303
protection sociale . retraite . CNAVPL . points acquis: 400
protection sociale . retraite . complémentaire: 14400
protection sociale . retraite . trimestres: 0
Notifications affichées : entreprise . TVA . franchise de TVA . seuils dépassés"
`;

exports[`calculate simulations-professions-libérales > CIPAV réduction et surcotisation 1`] = `
"dirigeant . indépendant . cotisations et contributions: 6239
dirigeant . rémunération . net: 833
dirigeant . rémunération . net . après impôt: 833
entreprise . chiffre d'affaires: 16236
impôt . montant: 0
protection sociale . retraite . CNAVPL . points acquis: 135
protection sociale . retraite . complémentaire: 9684
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV réduction et surcotisation 2`] = `
"dirigeant . indépendant . cotisations et contributions: 23230
dirigeant . rémunération . net: 4167
dirigeant . rémunération . net . après impôt: 3374
entreprise . chiffre d'affaires: 73236
impôt . montant: 9519
protection sociale . retraite . CNAVPL . points acquis: 531
protection sociale . retraite . complémentaire: 95634
protection sociale . retraite . trimestres: 4
Notifications affichées : entreprise . TVA . franchise de TVA . seuils dépassés"
`;

exports[`calculate simulations-professions-libérales > CIPAV réduction et surcotisation 3`] = `
"dirigeant . indépendant . cotisations et contributions: 49207
dirigeant . rémunération . net: 8333
dirigeant . rémunération . net . après impôt: 5968
entreprise . chiffre d'affaires: 149196
impôt . montant: 28378
protection sociale . retraite . CNAVPL . points acquis: 538
protection sociale . retraite . complémentaire: 251597
protection sociale . retraite . trimestres: 4
Notifications affichées : entreprise . TVA . franchise de TVA . seuils dépassés"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 1`] = `
"dirigeant . indépendant . cotisations et contributions: 2783
dirigeant . rémunération . net: 42
dirigeant . rémunération . net . après impôt: 42
entreprise . chiffre d'affaires: 3288
impôt . montant: 0
protection sociale . retraite . CNAVPL . points acquis: 61
protection sociale . retraite . complémentaire: 2210
protection sociale . retraite . trimestres: 3"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 2`] = `
"dirigeant . indépendant . cotisations et contributions: 2842
dirigeant . rémunération . net: 83
dirigeant . rémunération . net . après impôt: 83
entreprise . chiffre d'affaires: 3840
impôt . montant: 0
protection sociale . retraite . CNAVPL . points acquis: 61
protection sociale . retraite . complémentaire: 2210
protection sociale . retraite . trimestres: 3"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 3`] = `
"dirigeant . indépendant . cotisations et contributions: 2903
dirigeant . rémunération . net: 125
dirigeant . rémunération . net . après impôt: 125
entreprise . chiffre d'affaires: 4404
impôt . montant: 0
protection sociale . retraite . CNAVPL . points acquis: 61
protection sociale . retraite . complémentaire: 2210
protection sociale . retraite . trimestres: 3"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 4`] = `
"dirigeant . indépendant . cotisations et contributions: 2964
dirigeant . rémunération . net: 167
dirigeant . rémunération . net . après impôt: 167
entreprise . chiffre d'affaires: 4968
impôt . montant: 0
protection sociale . retraite . CNAVPL . points acquis: 61
protection sociale . retraite . complémentaire: 2210
protection sociale . retraite . trimestres: 3"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 5`] = `
"dirigeant . indépendant . cotisations et contributions: 3377
dirigeant . rémunération . net: 417
dirigeant . rémunération . net . après impôt: 417
entreprise . chiffre d'affaires: 8376
impôt . montant: 0
protection sociale . retraite . CNAVPL . points acquis: 67
protection sociale . retraite . complémentaire: 2423
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 6`] = `
"dirigeant . indépendant . cotisations et contributions: 4551
dirigeant . rémunération . net: 833
dirigeant . rémunération . net . après impôt: 833
entreprise . chiffre d'affaires: 14544
impôt . montant: 0
protection sociale . retraite . CNAVPL . points acquis: 134
protection sociale . retraite . complémentaire: 4820
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 7`] = `
"dirigeant . indépendant . cotisations et contributions: 47523
dirigeant . rémunération . net: 8333
dirigeant . rémunération . net . après impôt: 5969
entreprise . chiffre d'affaires: 147516
impôt . montant: 28363
protection sociale . retraite . CNAVPL . points acquis: 538
protection sociale . retraite . complémentaire: 232243
protection sociale . retraite . trimestres: 4
Notifications affichées : entreprise . TVA . franchise de TVA . seuils dépassés"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 8`] = `
"dirigeant . indépendant . cotisations et contributions: 239427
dirigeant . rémunération . net: 83333
dirigeant . rémunération . net . après impôt: 43892
entreprise . chiffre d'affaires: 1239432
impôt . montant: 473298
protection sociale . retraite . CNAVPL . points acquis: 550
protection sociale . retraite . complémentaire: 257400
protection sociale . retraite . trimestres: 4
Notifications affichées : entreprise . TVA . franchise de TVA . seuils dépassés"
`;

exports[`calculate simulations-professions-libérales > auxiliaire médical 1`] = `
"dirigeant . indépendant . cotisations et contributions: 8078
dirigeant . rémunération . net: 1827
dirigeant . rémunération . net . après impôt: 1726
entreprise . chiffre d'affaires: 30000
impôt . montant: 1208
protection sociale . retraite . CNAVPL . points acquis: 293
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > auxiliaire médical 2`] = `
"dirigeant . indépendant . cotisations et contributions: 8314
dirigeant . rémunération . net: 1807
dirigeant . rémunération . net . après impôt: 1710
entreprise . chiffre d'affaires: 30000
impôt . montant: 1170
protection sociale . retraite . CNAVPL . points acquis: 290
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > auxiliaire médical 3`] = `
"dirigeant . indépendant . cotisations et contributions: 62883
dirigeant . rémunération . net: 19760
dirigeant . rémunération . net . après impôt: 12287
entreprise . chiffre d'affaires: 300000
impôt . montant: 89673
protection sociale . retraite . CNAVPL . points acquis: 550
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > avocat 1`] = `
"dirigeant . indépendant . cotisations et contributions: 11135
dirigeant . rémunération . net: 3239
dirigeant . rémunération . net . après impôt: 2740
entreprise . chiffre d'affaires: 50004
impôt . montant: 5989
protection sociale . retraite . CNAVPL . points acquis: 518
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4
Notifications affichées : entreprise . TVA . franchise de TVA . seuils dépassés"
`;

exports[`calculate simulations-professions-libérales > avocat 2`] = `
"dirigeant . indépendant . cotisations et contributions: 11805
dirigeant . rémunération . net: 3183
dirigeant . rémunération . net . après impôt: 2701
entreprise . chiffre d'affaires: 50004
impôt . montant: 5788
protection sociale . retraite . CNAVPL . points acquis: 510
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4
Notifications affichées : entreprise . TVA . franchise de TVA . seuils dépassés"
`;

exports[`calculate simulations-professions-libérales > expert-comptable 1`] = `
"dirigeant . indépendant . cotisations et contributions: 5014
dirigeant . rémunération . net: 1249
dirigeant . rémunération . net . après impôt: 1244
entreprise . chiffre d'affaires: 20004
impôt . montant: 58
protection sociale . retraite . CNAVPL . points acquis: 200
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > expert-comptable 2`] = `
"dirigeant . indépendant . cotisations et contributions: 14817
dirigeant . rémunération . net: 2932
dirigeant . rémunération . net . après impôt: 2525
entreprise . chiffre d'affaires: 50004
impôt . montant: 4885
protection sociale . retraite . CNAVPL . points acquis: 471
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4
Notifications affichées : entreprise . TVA . franchise de TVA . seuils dépassés"
`;

exports[`calculate simulations-professions-libérales > médecin 1`] = `
"dirigeant . indépendant . cotisations et contributions: 14396
dirigeant . rémunération . net: 2967
dirigeant . rémunération . net . après impôt: 2550
entreprise . chiffre d'affaires: 50004
impôt . montant: 5009
protection sociale . retraite . CNAVPL . points acquis: 476
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > médecin 2`] = `
"dirigeant . indépendant . cotisations et contributions: 19894
dirigeant . rémunération . net: 2509
dirigeant . rémunération . net . après impôt: 2229
entreprise . chiffre d'affaires: 50004
impôt . montant: 3360
protection sociale . retraite . CNAVPL . points acquis: 405
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > médecin 3`] = `
"dirigeant . indépendant . cotisations et contributions: 86970
dirigeant . rémunération . net: 17753
dirigeant . rémunération . net . après impôt: 11184
entreprise . chiffre d'affaires: 300012
impôt . montant: 78834
protection sociale . retraite . CNAVPL . points acquis: 550
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > médecin 4`] = `
"dirigeant . indépendant . cotisations et contributions: 106674
dirigeant . rémunération . net: 24444
dirigeant . rémunération . net . après impôt: 14626
entreprise . chiffre d'affaires: 399996
impôt . montant: 117813
protection sociale . retraite . CNAVPL . points acquis: 550
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > médecin 5`] = `
"dirigeant . indépendant . cotisations et contributions: 34449
dirigeant . rémunération . net: 7129
dirigeant . rémunération . net . après impôt: 5285
entreprise . chiffre d'affaires: 120000
impôt . montant: 22133
protection sociale . retraite . CNAVPL . points acquis: 536
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4
Notifications affichées : entreprise . TVA . franchise de TVA . seuils dépassés"
`;

exports[`calculate simulations-professions-libérales > médecin 6`] = `
"dirigeant . indépendant . cotisations et contributions: 14396
dirigeant . rémunération . net: 2967
dirigeant . rémunération . net . après impôt: 2550
entreprise . chiffre d'affaires: 50004
impôt . montant: 5009
protection sociale . retraite . CNAVPL . points acquis: 476
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > sage-femme 1`] = `
"dirigeant . indépendant . cotisations et contributions: 12482
dirigeant . rémunération . net: 3127
dirigeant . rémunération . net . après impôt: 2661
entreprise . chiffre d'affaires: 50004
impôt . montant: 5587
protection sociale . retraite . CNAVPL . points acquis: 501
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > sage-femme 2`] = `
"dirigeant . indépendant . cotisations et contributions: 5220
dirigeant . rémunération . net: 1232
dirigeant . rémunération . net . après impôt: 1230
entreprise . chiffre d'affaires: 20004
impôt . montant: 25
protection sociale . retraite . CNAVPL . points acquis: 198
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4
Notifications affichées : dirigeant . indépendant . PL . CARCDSF . retraite complémentaire . cotisation forfaitaire . réduction applicable"
`;

exports[`calculate simulations-professions-libérales > sage-femme 3`] = `
"dirigeant . indépendant . cotisations et contributions: 1547
dirigeant . rémunération . net: 204
dirigeant . rémunération . net . après impôt: 204
entreprise . chiffre d'affaires: 3996
impôt . montant: 0
protection sociale . retraite . CNAVPL . points acquis: 61
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 3
Notifications affichées : dirigeant . indépendant . PL . CARCDSF . retraite complémentaire . cotisation forfaitaire . réduction applicable, dirigeant . indépendant . PL . CARCDSF . sage-femme . exonération PCV"
`;

exports[`calculate simulations-professions-libérales > sage-femme 4`] = `
"dirigeant . indépendant . cotisations et contributions: 5220
dirigeant . rémunération . net: 1232
dirigeant . rémunération . net . après impôt: 1230
entreprise . chiffre d'affaires: 20004
impôt . montant: 25
protection sociale . retraite . CNAVPL . points acquis: 198
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4
Notifications affichées : dirigeant . indépendant . PL . CARCDSF . retraite complémentaire . cotisation forfaitaire . réduction applicable"
`;

exports[`calculate simulations-professions-libérales > sage-femme 5`] = `
"dirigeant . indépendant . cotisations et contributions: 5297
dirigeant . rémunération . net: 1225
dirigeant . rémunération . net . après impôt: 1224
entreprise . chiffre d'affaires: 19992
impôt . montant: 10
protection sociale . retraite . CNAVPL . points acquis: 196
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4
Notifications affichées : dirigeant . indépendant . PL . CARCDSF . retraite complémentaire . cotisation forfaitaire . réduction applicable"
`;

exports[`calculate simulations-professions-libérales > sage-femme 6`] = `
"dirigeant . indépendant . cotisations et contributions: 5378
dirigeant . rémunération . net: 1219
dirigeant . rémunération . net . après impôt: 1219
entreprise . chiffre d'affaires: 20004
impôt . montant: 0
protection sociale . retraite . CNAVPL . points acquis: 195
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4
Notifications affichées : dirigeant . indépendant . PL . CARCDSF . retraite complémentaire . cotisation forfaitaire . réduction applicable"
`;
